# rpcx-rs-examples

./: Cargo.toml  README.md
client_call_mul/: Cargo.toml
client_call_mul_async/: Cargo.toml
mul_model/: Cargo.toml
protobuf/client_call_mul/: Cargo.toml
protobuf/mul_model_proto/: Cargo.toml
protobuf/server_mul/: Cargo.toml
server_mul/: Cargo.toml
server_register/: Cargo.toml
xclient_call_mul/: Cargo.toml
