[package]
name = "server_service"
version = "0.1.3"
authors = ["smallnest <smallnest@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpcx = { git = "https://github.com/smallnest/rpcx-rs" }
mul_model =  { path = "../mul_model" }